Update to version 0.1.3-1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ include_directories ( ${CMAKE_CURRENT_SOURCE_DIR}/src )
 
 set ( LUA_LLTHREADS_SRC src/l52util.c src/llthread.c )
 
-install_lua_module ( llthreads2 ${LUA_LLTHREADS_SRC} LINK ${CMAKE_THREAD_LIBS_INIT} )
+install_lua_module ( llthreads2    ${LUA_LLTHREADS_SRC} LINK ${CMAKE_THREAD_LIBS_INIT} )
+install_lua_module ( llthreads2.ex src/lua/llthreads2/ex.lua                           )
 
 install_data ( COPYRIGHT.llthreads README.md LICENSE )
 install_test ( test/ )
